--- a/static/www/index.html
+++ b/static/www/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="css/pico.css">
   </head>
   <body>
-    <p>Hello</p>
+    <h1>Hello</h1>
+    <a href="/create_snippet.html">Create snippet</a>
     <div id="snippets">
+    <div id="message-block" class="bar warn">Initialization, wait...</div>
     </div>
     <script src="js/helpers.js"></script>
     <script src="js/main.js"></script>
+    <script>index()</script>
   </body>
 </html>
