--- a/static/www/snippet.html
+++ b/static/www/snippet.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <title>ynote</title>
     <link rel="stylesheet" href="css/pico.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <p>Hello</p>
-    <div id="snippet">
-    <div id="message-block" class="bar warn">Initialization, wait...</div>
+    <div id="snippet" class="container-fluid content">
+      <div id="message-block" class="bar warn">Initialization, wait...</div>
     </div>
     <script src="js/helpers.js"></script>
     <script src="js/main.js"></script>
