--- a/static/www/index.html
+++ b/static/www/index.html
@@ -6,10 +6,30 @@
     <link rel="stylesheet" href="css/pico.css">
   </head>
   <body>
-    <h1>Hello</h1>
-    <a href="/create_snippet.html">Create snippet</a>
-    <div id="snippets">
-    <div id="message-block" class="bar warn">Initialization, wait...</div>
+    <div class="container">
+      <h1>Hello</h1>
+      <form action="/index.html">
+        <div class="grid">
+          <label for="firstname">
+            Tags
+            <input placeholder="Tags" name="tags">
+          </label>
+          <label for="firstname">
+            Type
+            <select name="type">
+              <option value="bash">bash</option>
+              <option value="c">c</option>
+            </select>
+          </label>
+          <button>Search</button>
+        </div>
+      </form>
+      <form action="/create_snippet.html">
+        <input type="submit" value="Create snippet" />
+      </form>
+      <div id="snippets">
+        <div id="message-block" class="bar warn">Initialization, wait...</div>
+      </div>
     </div>
     <script src="js/helpers.js"></script>
     <script src="js/main.js"></script>
