--- a/static/www/upload_form.html
+++ b/static/www/upload_form.html
@@ -6,6 +6,9 @@
     <h2>Select files to upload</h2>
     <form name="upload" method="POST" enctype="multipart/form-data" action="/upload">
       <input type="file" name="file1"><br>
+      <input type="file" name="file1"><br>
+      <input type="file" name="file4"><br>
+      <input type="input" name="test1"><br>
       <input type="submit" name="submit" value="Upload">
       <input type="hidden" name="test" value="value">
     </form>
