frontend: better errors handling, <pre> tag for messages of type code

--- a/static/www/create_snippet.html
+++ b/static/www/create_snippet.html
@@ -14,7 +14,7 @@
       <label for="type-list">Type
         <select id="type-list"></select>
       </label>
-      <code class="container-fluid" contenteditable="true" id="content">Your code here</code>
+      <pre><code class="container-fluid" contenteditable="true" id="content">Your code here</code></pre>
       <label for="type-list">Tags
         <input class="container-fluid" id="tags"></input>
       </label>
